--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
-[submodule "pi-pico/lwip"]
-	path = pi-pico/lwip
-	url = https://git.savannah.nongnu.org/git/lwip.git
 [submodule "pi-pico/pico-sdk"]
 	path = pi-pico/pico-sdk
 	url = https://github.com/raspberrypi/pico-sdk.git
-[submodule "pi-pico/tinyusb"]
-	path = pi-pico/tinyusb
-	url = https://github.com/raspberrypi/tinyusb.git
+[submodule "pi-pico/littlefs-lib"]
+	path = pi-pico/littlefs-lib
+	url = https://github.com/lurk101/littlefs-lib
+[submodule "pi-pico/enc28j60driver"]
+	path = pi-pico/enc28j60driver
+	url = https://gitlab.com/enc28j60driver/enc28j60driver
