Many cleanups and improvements

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,9 @@
 	url = https://github.com/raspberrypi/pico-sdk.git
 [submodule "pi-pico/littlefs-lib"]
 	path = pi-pico/littlefs-lib
-	url = https://github.com/lurk101/littlefs-lib
+	url = https://github.com/dh1df/littlefs-lib
 [submodule "pi-pico/enc28j60driver"]
 	path = pi-pico/enc28j60driver
 	url = https://gitlab.com/enc28j60driver/enc28j60driver
+[submodule "littlefs-lib"]
+	url = https://github.com/dh1df/littlefs-lib
